kubernetes/apps/web/homepage/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: web
  annotations:
    external-dns.alpha.kubernetes.io/hostname: homepage.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external.krapulax.dev
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Dashboards
    gethomepage.dev/name: Homepage
    gethomepage.dev/icon: homepage.png
    gethomepage.dev/description: Kubernetes-native homelab dashboard
    gethomepage.dev/weight: "5"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - homepage.krapulax.dev
  rules:
    - backendRefs:
        - name: homepage
          namespace: web
          port: 80
